# rewardhack-gym

./: .gitignore  README.md  pyproject.toml
docs/: adding-environment.md  annotations.md  architecture.md  execution-model.md  families.md  mech-interp.md  prompting-and-rl.md  trace-export.md
src/rewardhack_gym/: __init__.py  __main__.py  bootstrap.py  cli.py
src/rewardhack_gym/analysis/: __init__.py  mech_interp.py  metrics.py
src/rewardhack_gym/core/: __init__.py  base.py  config.py  models.py  registry.py
src/rewardhack_gym/envs/: __init__.py
src/rewardhack_gym/envs/code/: __init__.py  interface_conformance.py  patch_verification.py  patch_verification_family.py  runtime.py  schema_preservation.py  schema_preservation_family.py  spec_overfit.py
src/rewardhack_gym/envs/math/: __init__.py  common.py  constraint_sensitive.py  constraint_sensitive_family.py  piecewise_reasoning.py  piecewise_reasoning_family.py  reasoning_validity.py  reasoning_validity_family.py  symbolic_mismatch.py
src/rewardhack_gym/io/: __init__.py  jsonl.py
src/rewardhack_gym/runners/: __init__.py  prompting.py  rl.py  selection.py
tests/: test_cli.py  test_code_environments.py  test_math_environments.py  test_mech_interp.py  test_metrics_and_io.py  test_profiles.py  test_registry.py
